--- a/.github/workflows/main_purenv-qld-api-backend.yml
+++ b/.github/workflows/main_purenv-qld-api-backend.yml
@@ -29,13 +29,10 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       # Optional: Add step to run tests here
 
@@ -79,5 +76,5 @@ jobs:
         with:
           app-name: 'PureNV-QLD-API-Backend'
           slot-name: 'Production'
-          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          package: '.'
           
