--- a/.github/workflows/main_purenv-qld-api-backend.yml
+++ b/.github/workflows/main_purenv-qld-api-backend.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r /get_lab/requirements.txt
+          pip install -r requirements.txt
 
       # Optional: Add step to run tests here
 
