Including API key variable in secure .env file and configuring feedback/__init__.py

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ SQL_SERVER = purenvqld.database.windows.net
 SQL_DB = Feedback
 SQL_USER = rpope@purenv.au
 SQL_PASSWORD = Red-R0ck6341
+BACKEND_API_KEY_DEFAULT = KcS1dXb0QVKW6573DTtY6FI973YI13lYvVsjhwQx19a7AzFuyLByyg==
