--- a/.github/workflows/main_purenv-qld-api-backend.yml
+++ b/.github/workflows/main_purenv-qld-api-backend.yml
@@ -37,7 +37,7 @@ jobs:
       # Optional: Add step to run tests here
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip host.json requirements.txt .python_packages/ feedback/
+        run: zip -r release.zip host.json requirements.txt .python_packages/
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
