--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ SQL_SERVER = purenvqld.database.windows.net
 SQL_DB = Feedback
 SQL_USER = rpope@purenv.au
 SQL_PASSWORD = Red-R0ck6341
+PYTHON_VERSION = 3.10
